timeTimerMod: try to make full dark mode, but not possible cause of design issue

--- a/timeTimerMod/timeTimerMod.css
+++ b/timeTimerMod/timeTimerMod.css
@@ -12,15 +12,82 @@ html, body {
     overflow: hidden;
     position: relative;
 }
+
 .timerSection {
     position: absolute;
+    padding: 15px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
     z-index: 11;
-    /* display: none; */
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+}
+.title {
+    font-size: 70px;
+    font-weight: bold;
+}
+.subTitle{
+    margin: 10px;
+    font-size: 20px;
+    font-style: italic;
+}
+.explanation {
+    margin: 10px;
+    font-size: 25px;
+    font-weight: bold;
+}
+.setMinutes{
+    border-style: none;
+    border-bottom: 1px solid black;
+    width: 250px;
+    height: 100px;
+    font-size: 70px;
+    padding: 0px;
+    text-align: center;
+}
+
+.setMinutes:focus {
+    outline: none;
+    border: none;
+}
+/*delete arrows next to input[type=number]*/
+/* input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+} */
+.timeLeft{
+    border-style: none;
+    width: 60vw;
+    height: 100px;
+    font-size: 70px;
+    text-align: center;
+}
+
+.btnSection{
+    display: flex;
+}
+button {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+    width: 50px;
+    height: 50px;
+    font-size: 50px;
+    margin: 15px;
+}
+
+button:hover {
+    background-color: red;
 }
 .canvas {
     position: absolute;
@@ -28,57 +95,48 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
-    /* display: none; */
-    /* background-color: black; */
+    z-index: 2;
 }
 
 .darkMode {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 1);
     color: white;
 }
 
-/*시계 숫자*/
-.number0 {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    font-size: 5em;
+.portionDarkMode {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+}
+.whiteMode {
+    background-color: rgba(255, 255, 255, 1);
+    color: black;
+}
+.portionWhiteMode {
+    background-color: rgba(255, 255, 255, 0.7);
+    color: black;
 }
 
-.number5 {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    /* justify-content: right; */
-    /* align-items:center; */
-    font-size: 5em;
-}
 
 /* Show duration */
-.graduationSection{
-    /* position: relative; */
+/* .graduationSection{
     width: 100%;
     height: 100%;
     overflow: hidden;
-}
+} */
+
 .circle1 .line {
     position: absolute;
     top: 50%;
     left: -10%;
     width: 120vw;
     height: 100vh;
-    background-color: black;
+    /* z-index: 11; */
   }
+
   
   .circle1 .line.thick {
     top: calc(50% - 2px);
     height: 4px;
-    /* z-index: 1; */
   }
   
   .circle1 .line.thin {
@@ -90,10 +148,11 @@ html, body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 95%;
-    height: 95%;
-    background-color: #ffffff;
+    width: 90%;
+    height: 90%;
+    /* background-color: #ffffff; */
     transform: translate(-50%, -50%);
+    z-index: 1;
 
   }
   
@@ -101,9 +160,9 @@ html, body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 95%;
-    height: 95%;
-    background-color: #ffffff;
+    width: 90%;
+    height: 90%;
+    /* background-color: #ffffff; */
     transform: translate(-50%, -50%);
-    /* z-index: 2; */
+    z-index: 1;
   }
